--- a/CTR-GCN/config/nturgbd120-cross-set/local_SH.yaml
+++ b/CTR-GCN/config/nturgbd120-cross-set/local_SH.yaml
@@ -1,7 +1,7 @@
 work_dir: ./work_dir/ntu120/xset/ctrgcn_joint
 
 # feeder
-feeder: feeders.feeder_ntu.Feeder
+feeder: feeders.feeder_ntu_SH.Feeder
 train_feeder_args:
   data_path: data/ntu120/NTU120_CSet_LSH.npz
   split: train
