precompute spherical harm. and adjust data loader

--- a/CTR-GCN/config/nturgbd120-cross-subject/global_SH.yaml
+++ b/CTR-GCN/config/nturgbd120-cross-subject/global_SH.yaml
@@ -11,7 +11,7 @@ train_feeder_args:
   random_move: False
   window_size: 64
   normalization: False
-  random_rot: True
+  random_rot: False
   p_interval: [0.75]
   vel: False
   bone: False
