--- a/CTR-GCN/work_dir/ntu120/csub/local_SHT1b/config.yaml
+++ b/CTR-GCN/work_dir/ntu120/csub/local_SHT1b/config.yaml
@@ -1,10 +1,10 @@
-# command line: main.py --config config/nturgbd120-cross-subject/default.yaml --model model.local_SHT1b.Model --work-dir work_dir/ntu120/csub/local_SHT1b --device 3 --weights work_dir/ntu120/csub/local_SHT1b/runs-39-38376.pt --phase test
+# command line: main.py --config config/nturgbd120-cross-subject/default_long.yaml --model model.local_SHT1b.Model --work-dir work_dir/ntu120/csub/local_SHT1b --device 4 --start-epoch 65 --weights work_dir/ntu120/csub/local_SHT1b/runs-65-63960.pt
 
 base_lr: 0.1
 batch_size: 64
-config: config/nturgbd120-cross-subject/default.yaml
+config: config/nturgbd120-cross-subject/default_long.yaml
 device:
-- 3
+- 4
 eval_interval: 5
 feeder: feeders.feeder_ntu.Feeder
 ignore_weights: []
@@ -20,10 +20,10 @@ model_args:
   num_point: 25
 model_saved_name: ''
 nesterov: true
-num_epoch: 65
+num_epoch: 110
 num_worker: 32
 optimizer: SGD
-phase: test
+phase: train
 print_log: true
 save_epoch: 30
 save_interval: 1
@@ -32,10 +32,12 @@ seed: 1
 show_topk:
 - 1
 - 5
-start_epoch: 0
+start_epoch: 65
 step:
 - 35
 - 55
+- 90
+- 100
 test_batch_size: 64
 test_feeder_args:
   bone: false
@@ -63,5 +65,5 @@ train_feeder_args:
   window_size: 64
 warm_up_epoch: 5
 weight_decay: 0.0004
-weights: work_dir/ntu120/csub/local_SHT1b/runs-39-38376.pt
+weights: work_dir/ntu120/csub/local_SHT1b/runs-65-63960.pt
 work_dir: work_dir/ntu120/csub/local_SHT1b
