--- a/CTR-GCN/config/nturgbd120-cross-set/bonevel.yaml
+++ b/CTR-GCN/config/nturgbd120-cross-set/bonevel.yaml
@@ -21,7 +21,7 @@ test_feeder_args:
   split: test
   window_size: 64
   p_interval: [0.95]
-  vel: False
+  vel: True
   bone: True
   debug: False
 
