--- a/CTR-GCN/work_dir/ntu120/csub/local_SHTg_bonevel/config.yaml
+++ b/CTR-GCN/work_dir/ntu120/csub/local_SHTg_bonevel/config.yaml
@@ -1,10 +1,10 @@
-# command line: main.py --config config/nturgbd120-cross-subject/bonevel.yaml --model model.local_SHTg.Model --work-dir work_dir/ntu120/csub/local_SHTg_bonevel --device 7
+# command line: main.py --config config/nturgbd120-cross-subject/bonevel.yaml --model model.local_SHTg.Model --work-dir work_dir/ntu120/csub/local_SHTg_bonevel --device 6
 
 base_lr: 0.1
 batch_size: 64
 config: config/nturgbd120-cross-subject/bonevel.yaml
 device:
-- 7
+- 6
 eval_interval: 5
 feeder: feeders.feeder_ntu.Feeder
 ignore_weights: []
@@ -44,7 +44,7 @@ test_feeder_args:
   p_interval:
   - 0.95
   split: test
-  vel: false
+  vel: true
   window_size: 64
 train_feeder_args:
   bone: true
